# provable

./: .dependency-cruiser.cjs  .dockerignore  .gitignore  .npmrc  DEPLOY.md  PROVABLE_BUILD_PLAN.md  PROVABLE_CORE_ARCHITECTURE.md  PROVABLE_STACK.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tsconfig.base.json  turbo.json  vercel.json
.github/workflows/: ci.yml
apps/api/: package.json  vitest.config.ts
apps/api/src/: anthropic-gateway.ts  app.ts  auth.ts  connector-engine.ts  connector.ts  crypto.ts  fleet.ts  gateway.ts  index.ts  recompute.ts  schemas.ts  server.ts  ssrf.ts  views.ts
apps/api/test/: admin.test.ts  anthropic-gateway.test.ts  atomicity.test.ts  auth.test.ts  connect.test.ts  connector.test.ts  connectors-engine.test.ts  e2e.test.ts  fleet.test.ts  freeset.test.ts  gateway.test.ts  global-setup.ts  guardrail-rules.test.ts  helpers.ts  idempotency.test.ts  killswitch.test.ts  phase7.test.ts  (+5 more)
apps/web/: .env.example  .gitignore  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
deploy/: .env.template  Dockerfile.api  Dockerfile.web  docker-compose.yml
docker/initdb/: 01-app-role.sql
scripts/: arch-gate-guard.mjs  assign-role.mjs  bootstrap.mjs  link-clerk-org.mjs  neon-bootstrap.sql  owner-seed.mjs  provision-org.mjs  reset-org.mjs  seed-7b.mjs
sdk-python/: README.md  pyproject.toml
sdk-python/src/provable_sdk/: __init__.py  _core.py  client.py  exceptions.py  models.py
sdk-python/tests/: test_clients.py  test_drift.py  test_integration.py  test_models.py
(+100 files in other folders)
