[project]
name = "provable-sdk"
version = "0.1.0"
description = "Provable Python SDK — Pydantic models + sync/async httpx clients for the ingestion/recompute API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provable_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end test against the live local API (needs PROVABLE_BASE_URL + PROVABLE_API_KEY)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
